feat: connection simple slider component

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -125,6 +125,13 @@
             </div>
           </div>         
         </section>
+
+        <section class="section section--md-pd section--bg">
+          <div class="container">
+            <h2 class="text-center">Supported by 12+ partners</h2>
+            @@include('../../components/simple-slider/index.html')
+          </div>
+        </section>
         
       </main> 
 
