--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -49,7 +49,7 @@
 
       </main>  
     </div>
-    
+    <script src="assets/lib/lib.js"></script>
     <script src="assets/js/scripts.min.js"></script>
 
   </body>
