--- a/src/pages/ui-kit/index.html
+++ b/src/pages/ui-kit/index.html
@@ -224,7 +224,7 @@
 
       </main>  
     </div>
-    
+    <script src="assets/lib/lib.js"></script>
     <script src="assets/js/scripts.min.js"></script>
 
   </body>
