feat: add connection to main

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -126,13 +126,19 @@
           </div>         
         </section>
 
-        <section class="section section--md-pd section--bg">
+        <section class="section section--mix-pd section--bg">
           <div class="container">
             <h2 class="text-center">Supported by 12+ partners</h2>
             @@include('../../components/simple-slider/index.html')
           </div>
         </section>
-        
+        @@include('../../components/img-content/index.html')
+        <section>
+          <div class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur, </h2>
+          </div>
+          
+        </section>
       </main> 
 
       @@include('../../components/footer/index.html')
