chore: build project

--- a/main.html
+++ b/main.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="assets/lib/lib.css">
   <link rel="stylesheet" href="assets/css/style.min.css">
   <title>Главная страница</title>
-
-  <link rel="icon" href="assets/favicon/favicon.svg">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="manifest" href="manifest.json">
 </head>
 
   <body>
@@ -405,7 +401,121 @@
             </div>
           </div>         
         </section>
-        
+
+        <section class="section section--mix-pd section--bg">
+          <div class="container">
+            <h2 class="text-center">Supported by 12+ partners</h2>
+            <div class="simple-slider swiper slider jsSliderMobile">
+  <div class="swiper-wrapper">
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-1.webp">
+        <img src="assets/img/clients/client-1.jpg" alt="Client 1">
+      </picture>
+    </div>
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-2.webp">
+        <img src="assets/img/clients/client-2.jpg" alt="Client 2">
+      </picture>
+    </div>
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-3.webp">
+        <img src="assets/img/clients/client-3.jpg" alt="Client 3">
+      </picture>
+    </div>
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-4.webp">
+        <img src="assets/img/clients/client-4.jpg" alt="Client 4">
+      </picture>
+    </div>
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-5.webp">
+        <img src="assets/img/clients/client-5.jpg" alt="Client 5">
+      </picture>
+    </div>
+    <div class="simple-slider__slide swiper-slide">
+      <picture>
+        <source type="image/webp" srcset="assets/img/clients/client-6.webp">
+        <img src="assets/img/clients/client-6.jpg" alt="Client 6">
+      </picture>
+    </div>
+  </div>
+  <div class="simple-slider__pagination swiper-pagination slider__pagination"></div>
+</div>
+          </div>
+        </section>
+        <section class="img-content">
+  <div class="container">
+    <div class="img-content__inner">
+      <div class="img-content__content">
+        <h2 class="img-content__title">What our clients are saying</h2>
+        <div class="img-content__slider reviews-slider swiper slider">
+  <div class="swiper-wrapper">
+    <div class="reviews-slider__slide swiper-slide">
+      <picture class="reviews-slider__avatar">
+        <source type="image/webp" srcset="assets/img/decor/profile.webp">
+        <img src="assets/img/decor/profile.jpg" alt="Shawn Edwards">
+      </picture>
+      <p class="reviews-slider__text">Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+      <div class="reviews-slider__bottom">
+        <p class="reviews-slider__author text-bold">Shawn Edwards</p>
+        <p class="reviews-slider__author-position text-small">Position, Company name</p>
+      </div>
+    </div>
+    <div class="reviews-slider__slide swiper-slide">
+      <picture class="reviews-slider__avatar">
+        <source type="image/webp" srcset="assets/img/decor/profile.webp">
+        <img src="assets/img/decor/profile.jpg" alt="Shawn Edwards">
+      </picture>
+      <p class="reviews-slider__text">Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+      <div class="reviews-slider__bottom">
+        <p class="reviews-slider__author text-bold">Shawn Edwards</p>
+        <p class="reviews-slider__author-position text-small">Position, Company name</p>
+      </div>
+    </div>
+    <div class="reviews-slider__slide swiper-slide">
+      <picture class="reviews-slider__avatar">
+        <source type="image/webp" srcset="assets/img/decor/profile.webp">
+        <img src="assets/img/decor/profile.jpg" alt="Shawn Edwards">
+      </picture>
+      <p class="reviews-slider__text">Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+      <div class="reviews-slider__bottom">
+        <p class="reviews-slider__author text-bold">Shawn Edwards</p>
+        <p class="reviews-slider__author-position text-small">Position, Company name</p>
+      </div>
+    </div>
+  </div>
+  <div class="reviews-slider__buttons">
+    <div class="reviews-slider__button-prev slider__button-prev swiper-button-prev">
+      <svg class="icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#left"></use>
+      </svg>
+    </div>
+    <div class="reviews-slider__button-next slider__button-next swiper-button-next">
+      <svg class="icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#right"></use>
+      </svg>
+    </div>
+  </div>  
+</div>
+      </div>
+      <picture class="img-content__img">
+        <source type="image/webp" srcset="assets/img/decor/reviews.webp">
+        <img src="assets/img/decor/reviews.jpg" alt="reviews">
+      </picture> 
+    </div>
+  </div>
+</section>
+        <section>
+          <div class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur, </h2>
+          </div>
+          
+        </section>
       </main> 
 
       <button class="go-to-top">
