hotfix: remove type from textarea

--- a/src/ui/input/index.html
+++ b/src/ui/input/index.html
@@ -4,6 +4,6 @@
 </label>
 
 <label class="input">
-  <textarea class="input__native" type="text" placeholder="Placeholder"></textarea>
+  <textarea class="input__native" placeholder="Placeholder"></textarea>
   <span class="input__lable">Лейбл</span>
 </label>
