--- a/src/ui/modal/index.html
+++ b/src/ui/modal/index.html
@@ -20,7 +20,7 @@
             <span class="input__lable">Phone*</span>
           </label>
           <label class="modal__input modal__input--message input">
-            <textarea class="input__native" name="message" type="text" placeholder="Your message"></textarea>
+            <textarea class="input__native" name="message" placeholder="Your message"></textarea>
             <span class="input__lable">Message*</span>
           </label>
           <button class="modal__button button" type="submit">Send</button>
@@ -96,7 +96,7 @@
             <span class="input__lable">Email*</span>
           </label>
           <label class="modal__input modal__input--message input">
-            <textarea class="input__native" name="message" type="text" placeholder="Your covering letter"></textarea>
+            <textarea class="input__native" name="message" placeholder="Your covering letter"></textarea>
             <span class="input__lable">Сovering letter</span>
           </label>
           <label class="modal__input input add-file">
