feat: add new blocks

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -18,7 +18,7 @@
         <section class="section">
           <div class="container">
             <h2 class="text-center">We are Createx Construction Bureau </h2>
-            <p class="text-center text-large">We are rightfully considered to be the best construction company in the USA.</p>
+            <p class="text-center text-large text-grey">We are rightfully considered to be the best construction company in the USA.</p>
             <div class="section__video">
               @@include('../../ui/video-cover/index.html')
             </div>            
@@ -28,7 +28,7 @@
         <section class="section section--sm-pd section--hidden">          
           <div class="container">
             <h2 class="text-center">Our core values</h2>
-            <p class="text-center text-large">Our mission is to set the highest standards for construction sphere.</p>
+            <p class="text-center text-large text-grey">Our mission is to set the highest standards for construction sphere.</p>
             @@include('../../components/benefits/index.html')
           </div> 
         </section>
@@ -46,7 +46,7 @@
           </picture>  
           <div class="container">
             <h2 class="text-center">Our services</h2>
-            <p class="text-center text-large">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
+            <p class="text-center text-large text-grey">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
             @@include('../../components/our-services/index.html')
             <div class="section__bottom">
               <h4>Learn more about our services</h4>
@@ -133,9 +133,10 @@
           </div>
         </section>
         @@include('../../components/img-content/index.html')
-        <section>
+        <section class="section section--big-pd section--decor">
           <div class="container">
-            <h2>Lorem ipsum dolor sit amet consectetur, </h2>
+            <h2  class="text-center">Some facts and figures</h2>
+            @@include('../../components/digits/index.html')
           </div>
           
         </section>
