--- a/main.html
+++ b/main.html
@@ -507,7 +507,7 @@
     </div>
   </div>
 </section>
-        <section class="section section--big-pd section--decor">
+        <section class="section section--big-pd section--decor" style="background-image: url(assets/img/background/bg-decor-white.jpg);">
           <div class="container">
             <h2  class="text-center">Some facts and figures</h2>
             <div class="digits">
@@ -548,9 +548,111 @@
     <p class="digits__text text-small">Succeeded projects</p>
   </div>
 </div>
-          </div>
-          
+            <h2  class="text-center">Recent news</h2>
+            <div class="main-news">    
+    <article class="news-card">
+  <div class="news-card__content">
+    <a class="news-card__link" href="#">
+      <h5>How to Build Climate Change-Resilient Infrastructure</h5>
+    </a>
+    <header class="news-card__info">
+        <span>Industry News</span>
+        <span>June 24, 2020</span>
+        <span>
+            <svg class="icon-svg">
+                <use xlink:href="assets/img/svg-sprite/sprite.svg#chat"></use>
+            </svg>
+            4 comments          
+        </span>
+    </header>
+    <p class="news-card__desc ">Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...</p>
+  </div>
+  <picture class="news-card__img">
+    <source type="image/webp" srcset="assets/img/news/news-1.webp">
+    <img src="assets/img/news/news-1.jpg" alt="How to Build Climate Change-Resilient Infrastructure">
+  </picture>
+</article>
+    <article class="news-card">
+  <div class="news-card__content">
+    <a class="news-card__link" href="#">
+      <h5>How Construction Can Help Itself</h5>
+    </a>
+    <header class="news-card__info">
+        <span>Innovation</span>
+        <span>June 12, 2020</span>
+        <span>
+            <svg class="icon-svg">
+                <use xlink:href="assets/img/svg-sprite/sprite.svg#chat"></use>
+            </svg>
+            No comments          
+        </span>
+    </header>
+    <p class="news-card__desc "></p>
+  </div>
+  <picture class="news-card__img">
+    <source type="image/webp" srcset="assets/img/news/news-2.webp">
+    <img src="assets/img/news/news-2.jpg" alt="How Construction Can Help Itself">
+  </picture>
+</article>
+    <article class="news-card">
+  <div class="news-card__content">
+    <a class="news-card__link" href="#">
+      <h5>Types of Flooring Materials</h5>
+    </a>
+    <header class="news-card__info">
+        <span>Company News</span>
+        <span>December 1, 2019</span>
+        <span>
+            <svg class="icon-svg">
+                <use xlink:href="assets/img/svg-sprite/sprite.svg#chat"></use>
+            </svg>
+            No comments          
+        </span>
+    </header>
+    <p class="news-card__desc "></p>
+  </div>
+  <picture class="news-card__img">
+    <source type="image/webp" srcset="assets/img/news/news-3.webp">
+    <img src="assets/img/news/news-3.jpg" alt="Types of Flooring Materials">
+  </picture>
+</article>
+</div>
+            <div class="section__bottom">
+              <h4>Explore all our news posts</h4>
+              <a class="section__button button button--lg" href="#">View all news</a>
+            </div>
+          </div>          
         </section>
+        <section class="request-form" style="background-image: url(assets/img/background/request-form.jpg);">
+    <div class="container">
+        <form class="request-form__form" action="">
+            <h4 class="request-form__title">A quick way to discuss details</h4>
+            <label class="request-form__input input">
+                <input class="input__native is-required" name="name" type="text" placeholder="Your name"> 
+                <span class="input__lable">Name*</span>
+            </label>
+            <label class="request-form__input input">
+                <input class="input__native is-required" name="phone" type="tel" placeholder="Your phone number"> 
+                <span class="input__lable">Phone*</span>
+            </label>
+            <label class="request-form__input input">
+                <input class="input__native" name="email" type="text" placeholder="Your working email"> 
+                <span class="input__lable">Email</span>
+            </label>
+            <label class="request-form__input request-form__input--message input">
+                <textarea class="input__native is-required" name="message" type="text" placeholder="Your message"></textarea>
+                <span class="input__lable">Message*</span>
+            </label>
+            <label class="request-form__agree checkbox">
+                <input class="checkbox__input" type="checkbox" checked>
+                <span class="checkbox__text">I agree to receive communications from Createx Construction Bureau.</span>
+            </label>
+            <div class="request-form__bottom">
+                <input class="request-form__button button" type="submit" value="send request">
+            </div>            
+        </form>
+    </div>
+</section>
       </main> 
 
       <button class="go-to-top">
